<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.justjava.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/topping_textview"
            android:text="@string/toppings"
            style="@style/HeaderTextStyle" />

        <CheckBox
            android:id="@+id/whipperCream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/chocolate"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/quantity_textView"
            android:text="@string/quantity"
            style="@style/HeaderTextStyle" />

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <Button
               android:layout_width="48dp"
               android:layout_height="48dp"
               android:onClick="decrement"
               android:text="-" />

           <TextView
               android:id="@+id/quantity_text_view"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="1"
               android:layout_marginLeft="8dp"
               android:layout_marginRight="8dp"
               android:textColor="@android:color/black"
               android:textSize="16sp" />

           <Button
               android:layout_width="48dp"
               android:layout_height="48dp"
               android:onClick="increment"
               android:text="+" />
       </LinearLayout>

        <TextView
            android:id="@+id/price_textView"
            android:text="@string/order"
            style="@style/HeaderTextStyle" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$0"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:textSize="16sp" />

        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textAllCaps="true"/>

    </LinearLayout>
</ScrollView>